# selfdrive

./: .gitignore  README.md
carlasim/remote_controller_client/: CMakeLists.txt  Makefile  file_utils.h  manual_control_api_test.cpp  remote_control
crawler/: CMakeLists.txt  Makefile  crawler_ego_car.py  ego_car.cpp  ego_car.h  pybind.cpp
crawler/arduino_controller/: arduino_controller.ino  arduino_controller.ino.hex  crawler_protocol.h  serial_bus_arduino.h  upload_hex.sh
crawler/arduino_controller/actuators/: double_ackman.h  engine_power.h
libdriveless/: CMakeLists.txt  Makefile
libdriveless/include/: angle.h  async_component.h  coord_conversion.h  cuda_basic.h  cuda_frame.h  cuda_params.h  cuda_ptr.h  interpolator.h  map_pose.h  math_utils.h  moving_obstacle.h  quaternion.h  search_frame.h  state.h  waypoint.h  world_pose.h
libdriveless/python_bind/: MANIFEST.in  setup.py
libdriveless/python_bind/app/: README.md
libdriveless/src/: angle.cpp  async_component.cpp  coord_conversion.cpp  interpolator.cpp  interpolator.old  map_pose.cpp  waypoint.cpp  world_pose.cpp
libdriveless/src/cuda/: cuda_frame.cu  quaternion.cu  search_frame.cu  search_frame_color.cu  search_frame_moving_obstacles.cu  search_frame_path_feasible.cu  search_frame_pre_process.cu  search_frame_python_bind.cpp  search_frame_waypoint_finder.cu
libdriveless/tests/: CMakeLists.txt  continous_testing.py  temp.py
libdriveless/tests/python/: test_angle.py  test_coordinate_converter_map_waypoint.py  test_coordinate_converter_world_map.py  test_discrete_component.py  test_fast_state_machine.py  test_interpolator.py  test_map_pose.py  test_map_pose_nearest_pose.py  test_path_heading copy.py  test_path_heading.py  test_quaternion.py  test_search_frame.py  test_search_frame_check_feasible_path.py  test_search_frame_copy_back.py  test_search_frame_is_traversable.py  test_search_frame_process_distance_to_goal.py  test_search_frame_set_goal.txt  test_telemetry.py  test_utils.py  test_waypoint.py  test_world_pose.py
libdriveless/tests/src/: test_angle.cpp  test_async_component.cpp  test_coord_conversion_map_pose.cpp  test_coord_conversion_waypoint.cpp  test_coord_conversion_world_pose.cpp  test_cuda_frame.cpp  test_interpolator.cpp  test_map_pose.cpp  test_map_pose_nearest_goal_pose.cpp  test_quaternion.cu  test_search_frame.cpp  test_search_frame_check_fesible_path.cpp  test_search_frame_check_fesible_path_fesible.cpp  test_search_frame_check_fesible_path_unfeasible.cpp  test_search_frame_compute_path_headings.cpp  test_search_frame_is_traversable.cpp  test_search_frame_process_distance_to_goal.cpp  test_search_frame_set_goal.cpp  test_search_frame_set_goal_vectorized.cpp  test_utils.cpp  test_utils.h  test_waypoint.cpp  test_world_pose.cpp  unittests.cpp
libfastrrt/: CMakeLists.txt  Makefile
libfastrrt/cmake/: Config.cmake.in
libfastrrt/include/: angle.h  cuda_grid.h  cuda_og.h  cuda_params.h  fastrrt.h  graph.h  waypoint.h
libfastrrt/python_bind/: MANIFEST.in  setup.py
libfastrrt/python_bind/app/: README.md
libfastrrt/src/: fastrrt.cpp  interpolation.cpp  interpolation_old.txt  python_bind.cpp  python_cuda_graph_bind.cpp
libfastrrt/src/cuda/: apf.cu  cuda_grid.cu  graph.cu  graph_best_node.cu  graph_collision.cu  graph_costs.cu  graph_list.cu  graph_node_derivation.cu  graph_nodes_in_range.cu  graph_optimization.cu  graph_smart_expansion.cu  kinematics.cu  path_feasible.cu  random_number_gen.cu
libfastrrt/tests/: continous_testing.py  planning_result_1.json
libfastrrt/tests/HiDrive/: readme.txt
libfastrrt/tests/python/: run_py_tests.sh  test_benchmark_cpu.py  test_benchmark_cpu_star.py  test_benchmark_cpu_star_video.py  test_benchmark_gpu.py  test_benchmark_gpu_video.py  test_cpu_rrt.py  test_utils.py
libfastrrt/tests/python_dataset/: dados_artigo_exec_time.py  test_benchmark_cpu.py  test_benchmark_gpu.py  timing.csv
libfastrrt/tests/src/: test_graph_best_node.cpp  test_graph_node_derivation.cpp  test_optimize_path.cpp  test_utils.cpp  tst_class_def.h
libgpd/: CMakeLists.txt  Makefile
libgpd/cmake/: Config.cmake.in
libgpd/include/: gpd.h
libgpd/python_bind/: MANIFEST.in  setup.py
libgpd/python_bind/app/: README.md
libgpd/src/: gpd.cu  gpd_pre_compute.cu  gpd_python_bind.cpp
libgpd/tests/: CMakeLists.txt  check_coord.py  continous_testing.py  coords.txt
libgpd/tests/python/: test_gpd.py  test_gpd_cases.py  test_utils.py
libgpd/tests/src/: test_gpd_lowest_cost_to_goal.cpp  test_gpd_lowest_cost_to_goal_exclusion_zone.cpp  test_gpd_with_heading.cpp  test_gpd_with_heading_exclusion_zone.cpp  test_utils.cpp  test_utils.h
tests/crawler/: CMakeLists.txt  manual_control  manual_control.cpp
tests/crawler/portable/: CMakeLists.txt  Makefile  crawler_ego_car.py  manual_control.py
utils/cuda_rrt_accel/: CMakeLists.txt  Makefile  cuda_rrt_accel.py
utils/cuda_rrt_accel/include/: cuda_basic.h  cuda_graph.h
utils/cuda_rrt_accel/src/: cuda_graph_optim.cu  driveless_cuda_graph.cpp  driveless_cuda_graph.cu  python_bind.cpp
utils/cuda_rrt_accel/unittests/: CMakeLists.txt  test_cuda_accel_optim.cpp  test_cuda_accel_optim.py  test_cuda_accel_rrt.cpp  test_cuda_accel_rrt.py
utils/cuda_utils/: CMakeLists.txt  Makefile
utils/cuda_utils/include/: cuda_utils.h
utils/cudac/: CMakeLists.txt  Makefile  class_def.h  cuda_basic.h  cuda_frame.h  cuda_frame.py  driveless_cuda_frame.cpp  driveless_cuda_frame.cu  python_bind.cpp
utils/datalink/: CMakeLists.txt  databridge.cpp  databridge.h  datalink.cpp  datalink.h  datalink_client_connection.cpp  datalink_client_connection.h  datalink_connection.cpp  datalink_connection.h  datalink_protocol.cpp  datalink_protocol.h  datalink_result.h  datalink_server_connection.cpp  datalink_server_connection.h
utils/fast_rrt/: CMakeLists.txt  Makefile  cpu_rrt.py  cpu_rrt_bidirectional.py  cpu_rrt_bidirectional_apf.py  dwa.py  fast_rrt.py  fastrrt.py  graph.py  node_grid.py
utils/seriallink/: CMakeLists.txt  Makefile  serial_bus.h  serial_bus_linux.cpp  serial_bus_linux.h  serial_protocol.cpp  serial_protocol.h  seriallink.cpp  seriallink.h
(+1147 files in other folders)
